created Our Team Page

--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
                     <li><a href="index.html">Home</a></li>
                     <li><a href="about.html">About Us</a></li>
                     <li><a href="services.html">Services</a></li>
-                    <li><a href="#">Meet Our Team</a></li>
+                    <li><a href="ourTeam.html">Meet Our Team</a></li>
                     <li><a href="#">Carrers</a></li>
                     <li><a href="#">Contact Us</a></li>
                 </ul>
@@ -59,10 +59,10 @@
                 <div class="about-main-text">
                     <h2> Our Strength</h2>
                     <p>Ensuring customer satisfaction is our core focus.
-                    We achieve this with our Team of certified experts who 
-                    can work on latest technologies and modern design techniques.
-                    We adopt Agile or waterfall methodologies for the development process.
-                    During SDLC, we adhere to the process to ensure your business requirements are met on time.
+                        We achieve this with our Team of certified experts who
+                        can work on latest technologies and modern design techniques.
+                        We adopt Agile or waterfall methodologies for the development process.
+                        During SDLC, we adhere to the process to ensure your business requirements are met on time.
                     </p>
                 </div>
                 <div>
@@ -74,15 +74,15 @@
                 <div class="about-main-text">
                     <h2>How are we different</h2>
                     <p>ThinkBiG thrives to be a premium services provider in the industry
-                    by creating a value for your business needs. We trust in adopting the
-                    right combination of Technologies, People and Process. <br> <br>
-                    We strongly feel our team is an asset for the company. 
-                    Our HR processes have been rigged to source talents, 
-                    design continuous training programs on core competencies 
-                    that empower them for challenging roles. <br> <br>
-                    We adhere to SDLC that ensures your delivery metrics. 
-                    Being a service provider we strongly believe in our process 
-                    to maintain consistency and deliver quality results on time.
+                        by creating a value for your business needs. We trust in adopting the
+                        right combination of Technologies, People and Process. <br> <br>
+                        We strongly feel our team is an asset for the company.
+                        Our HR processes have been rigged to source talents,
+                        design continuous training programs on core competencies
+                        that empower them for challenging roles. <br> <br>
+                        We adhere to SDLC that ensures your delivery metrics.
+                        Being a service provider we strongly believe in our process
+                        to maintain consistency and deliver quality results on time.
                     </p>
                 </div>
                 <div>
@@ -93,16 +93,16 @@
             <div class="about-main-box">
                 <div class="about-main-text">
                     <h2>Why Choose ThinkBIG</h2>
-                    <p>ThinkBiG software solutions are a dynamic medley of offshore project 
-                    applications and ERP implementation services and business consultancy services.
-                    <br> <br>
-                    We thrive on building a strong relationship with our clients 
-                    that lasts on the basis of our effective consultancy and quick 
-                    dispensation of IT solutions on reasonable costs. <br> <br>
-                    ThinkBiG software solutions is a grand medley of enterprise 
-                    resource planning implementation and business consultancy 
-                    services that started out in 2019 as an offshore consulting 
-                    company along with project ERP product and AMS.
+                    <p>ThinkBiG software solutions are a dynamic medley of offshore project
+                        applications and ERP implementation services and business consultancy services.
+                        <br> <br>
+                        We thrive on building a strong relationship with our clients
+                        that lasts on the basis of our effective consultancy and quick
+                        dispensation of IT solutions on reasonable costs. <br> <br>
+                        ThinkBiG software solutions is a grand medley of enterprise
+                        resource planning implementation and business consultancy
+                        services that started out in 2019 as an offshore consulting
+                        company along with project ERP product and AMS.
                     </p>
                 </div>
                 <div>
@@ -181,20 +181,20 @@
                 <div class="engagement-model-text">
                     <h2>Time & Materials</h2> <br>
                     <p>Through the Time & Material Business Model,
-                    at ThinkBiG we offer you the flexibility to alter 
-                    specifications with revisions in requirements 
-                    based on your business needs. This model is 
-                    suitable for projects, which, are in the initial
-                    stages of development where specifications have not yet been clearly defined <br> <br>
-                    The client pays an hourly development fee; which is a fee agreed 
-                    mutually at the time of contract signing. Hence, the cost is
-                    determined by the amount of time and resources utilized. 
-                    You as our client may revise the size of the team,
-                    and at the same time, optimize the cost and duration of the project. <br> <br>
-                    We exclusively work with few clients to develop their POC or 
-                    new upgrades to their existing application through this model. 
-                    This Engagement model includes everything from designing, development, 
-                    user & usability testing to deployment in the designated environment.
+                        at ThinkBiG we offer you the flexibility to alter
+                        specifications with revisions in requirements
+                        based on your business needs. This model is
+                        suitable for projects, which, are in the initial
+                        stages of development where specifications have not yet been clearly defined <br> <br>
+                        The client pays an hourly development fee; which is a fee agreed
+                        mutually at the time of contract signing. Hence, the cost is
+                        determined by the amount of time and resources utilized.
+                        You as our client may revise the size of the team,
+                        and at the same time, optimize the cost and duration of the project. <br> <br>
+                        We exclusively work with few clients to develop their POC or
+                        new upgrades to their existing application through this model.
+                        This Engagement model includes everything from designing, development,
+                        user & usability testing to deployment in the designated environment.
                     </p>
                 </div>
                 <div>
@@ -206,18 +206,18 @@
                 <div class="engagement-model-text">
                     <h2>Offshore Development Centerv (ODC)</h2> <br>
                     <p>This model involves teams who act as an extension of your team.
-                    They are located at a different location and managed by an offshore 
-                    development organization that only have  proven 
-                    records of offshore delivery capabilities. <br> <br>
-                    Opting to this model includes multiple benefits including, 
-                    but not limited to cost-effective operations, 
-                    teams that scale up and down as needed, increased work hours 
-                    in a given calendar day for faster delivery. 
-                    A dedicated team assigned by an ODC will offer a set of 
-                    resources with relevant and pre-identified skill sets 
-                    that the client will always  have full access to track status, 
-                    have total control over work allocations, consistent progress
-                    reports and having revisions updated at a short notice!
+                        They are located at a different location and managed by an offshore
+                        development organization that only have proven
+                        records of offshore delivery capabilities. <br> <br>
+                        Opting to this model includes multiple benefits including,
+                        but not limited to cost-effective operations,
+                        teams that scale up and down as needed, increased work hours
+                        in a given calendar day for faster delivery.
+                        A dedicated team assigned by an ODC will offer a set of
+                        resources with relevant and pre-identified skill sets
+                        that the client will always have full access to track status,
+                        have total control over work allocations, consistent progress
+                        reports and having revisions updated at a short notice!
                     </p>
                 </div>
                 <div>
