--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                     <li><a href="index.html">Home</a></li>
                     <li><a href="about.html">About Us</a></li>
                     <li><a href="services.html">Services</a></li>
-                    <li><a href="#">Meet Our Team</a></li>
+                    <li><a href="ourTeam.html">Meet Our Team</a></li>
                     <li><a href="#">Carrers</a></li>
                     <li><a href="#">Contact Us</a></li>
                 </ul>
