--- a/services.html
+++ b/services.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/services.css">
     <title>Services</title>
 </head>
+
 <body>
     <div class="container">
         <header class="nav-bar">
@@ -19,7 +21,7 @@
                     <li><a href="index.html">Home</a></li>
                     <li><a href="about.html">About Us</a></li>
                     <li><a href="services.html">Services</a></li>
-                    <li><a href="#">Meet Our Team</a></li>
+                    <li><a href="ourTeam.html">Meet Our Team</a></li>
                     <li><a href="#">Carrers</a></li>
                     <li><a href="#">Contact Us</a></li>
                 </ul>
@@ -36,7 +38,7 @@
         <section class="section-sap-grid">
             <div class="section-header-text-box">
                 <p>With our extensive SAP expertise and multi-disciplinary business backgrounds,
-                ThinkBiG Software solutions consultants can deliver a broad range of SAP solutions</p>
+                    ThinkBiG Software solutions consultants can deliver a broad range of SAP solutions</p>
             </div>
             <div class="section-content-text-box">
                 <h3>benefits :</h3>
@@ -66,24 +68,24 @@
                 </div>
                 <div class="text-box">
                     <p>In the era of ever-changing technologies and practices,
-                    choosing the right technology partner gets your one step closer to success,
-                    We at ThinkBiG are equipped to deliver highly customised, robust, 
-                    fast and agile solutions that adds value to your business. 
-                    Be it Web, Cloud or a Desktop application we are your right partners
-                    to reach your goal faster. With our expertise we can partner with you
-                    for all of your technology needs  be it a turn key solution or 
-                    an upgrade to your existing system. At ThinkBiG we strongly believe
-                    in an agile delivery model and professional DevOps to minimise 
-                    amateur intervention on all our solutions. <br> <br>
-                    Business entities need to anticipate their business needs and constantly
-                    evolve custom software development practices. ThinkBiG consults with them
-                    to identify their needs and challenges and provide our service 
-                    as an appropriate solution. We provide experts design, 
-                    development and integration services for business applications. 
-                    We develop systems based on open standards, using JAVA based 
-                    technologies in the process of digital transformation. <br> <br>
-                    Our software development services are diversified into a desktop,
-                    web, mobile and hybrid app development that is specific to business requirements. <br> <br> </p>
+                        choosing the right technology partner gets your one step closer to success,
+                        We at ThinkBiG are equipped to deliver highly customised, robust,
+                        fast and agile solutions that adds value to your business.
+                        Be it Web, Cloud or a Desktop application we are your right partners
+                        to reach your goal faster. With our expertise we can partner with you
+                        for all of your technology needs be it a turn key solution or
+                        an upgrade to your existing system. At ThinkBiG we strongly believe
+                        in an agile delivery model and professional DevOps to minimise
+                        amateur intervention on all our solutions. <br> <br>
+                        Business entities need to anticipate their business needs and constantly
+                        evolve custom software development practices. ThinkBiG consults with them
+                        to identify their needs and challenges and provide our service
+                        as an appropriate solution. We provide experts design,
+                        development and integration services for business applications.
+                        We develop systems based on open standards, using JAVA based
+                        technologies in the process of digital transformation. <br> <br>
+                        Our software development services are diversified into a desktop,
+                        web, mobile and hybrid app development that is specific to business requirements. <br> <br> </p>
                 </div>
             </div>
 
@@ -93,11 +95,11 @@
                     <h3>Enterprise Application</h3>
                     <p>Be it a first-of-a-kind commercial ERP, a start-up idea
                         or a proprietary or an LOB application, ThinkBiG enables
-                        you to create solutions as splendid as possible from scratch, 
-                        with you being the sole owner of the source-code and IPs. 
+                        you to create solutions as splendid as possible from scratch,
+                        with you being the sole owner of the source-code and IPs.
                         ThinkBiG also helps you leverage your existing IT investments
-                        by re-designing, refactoring and enhancing the outdated and 
-                        inefficient systems you currently use. ThinkBiG has established 
+                        by re-designing, refactoring and enhancing the outdated and
+                        inefficient systems you currently use. ThinkBiG has established
                         migrations to newer platforms, refinement of development practices
                         and technical architecture review.</p>
                 </div>
@@ -105,12 +107,12 @@
                     <img src="/images/6456456.png" alt="Cloud based application">
                     <h3>Cloud based application</h3>
                     <p>ThinkBiG provides a complete solution that supports the design,
-                        development and deployment of applications by utilising 
-                        the agility & cost effective attributes of the Cloud. 
-                        ThinkBiG thoroughly explores cloud strategy to eliminate 
-                        barriers from innovation and transforming applications 
-                        into cost-effective solutions . We are flexible working 
-                        with platforms like Amazon Web Services (AWS), 
+                        development and deployment of applications by utilising
+                        the agility & cost effective attributes of the Cloud.
+                        ThinkBiG thoroughly explores cloud strategy to eliminate
+                        barriers from innovation and transforming applications
+                        into cost-effective solutions . We are flexible working
+                        with platforms like Amazon Web Services (AWS),
                         Microsoft Azure, Google Cloud or any other cloud platforms.</p>
                 </div>
             </div>
@@ -127,18 +129,18 @@
         <section class="mobile-app-devlopment-container development-section">
             <div class="service-container mobile-container">
                 <div class="text-box">
-                    <p>ThinkBiG offers advanced services in the field of mobile application 
-                    development across various platforms. We are constantly engaged in raising
-                    the bar and setting higher standards for mobile applications by using 
-                    the three key characteristics, i.e. anytime access, personalized and contextual use. <br> <br>
-                    We are trained on various device platforms and leverage
-                    the best practices and solution accelerators for 
-                    cross-platform mobile app development.
-                    We help you build an end-to-end mobility solution 
-                    while keeping it simple, usable, intuitive, secure and cost-effective.
-                    The goal of our mobile development team is to not only bring your
-                    idea for an app to reality, but to help your organization reach more customers, 
-                    operate more efficiently and lower costs of running the business. <br> <br> </p>
+                    <p>ThinkBiG offers advanced services in the field of mobile application
+                        development across various platforms. We are constantly engaged in raising
+                        the bar and setting higher standards for mobile applications by using
+                        the three key characteristics, i.e. anytime access, personalized and contextual use. <br> <br>
+                        We are trained on various device platforms and leverage
+                        the best practices and solution accelerators for
+                        cross-platform mobile app development.
+                        We help you build an end-to-end mobility solution
+                        while keeping it simple, usable, intuitive, secure and cost-effective.
+                        The goal of our mobile development team is to not only bring your
+                        idea for an app to reality, but to help your organization reach more customers,
+                        operate more efficiently and lower costs of running the business. <br> <br> </p>
                 </div>
                 <div>
                     <img src="/images/2341.png" alt="mobile app development">
@@ -149,7 +151,7 @@
                 <div class="mobile-card">
                     <img src="/images/002-apple.png" alt="Apple ios">
                     <h3> IOS App</h3>
-                    <p>Our creative team understands what makes the iPad, 
+                    <p>Our creative team understands what makes the iPad,
                         iPhone and iPod Touch tick, and we work within the easy interface,
                         high security and extensive features of this incredible operating system.</p>
                 </div>
@@ -157,18 +159,18 @@
                     <img src="/images/001-android.png" alt="Android">
                     <h3>Android App</h3>
                     <p>We specialize in customizing, developing, designing, testing,
-                        and launching Android applications. Our experienced, 
-                        problem-solving team can offer unique insights with 
-                        their years of experience and industry trust.   
+                        and launching Android applications. Our experienced,
+                        problem-solving team can offer unique insights with
+                        their years of experience and industry trust.
                     </p>
                 </div>
                 <div class="mobile-card">
                     <img src="/images/003-cross.png" alt="Cross platform">
                     <h3>Cross platform App</h3>
                     <p>We use leading open technology frameworks such as AngularJS,
-                    Backbone.js Node.js, combined with standard web technologies
-                    for any major mobile device platform. 
-                    Our Mobile applications are categorised as Native.</p>
+                        Backbone.js Node.js, combined with standard web technologies
+                        for any major mobile device platform.
+                        Our Mobile applications are categorised as Native.</p>
                 </div>
             </div>
 
@@ -188,22 +190,22 @@
                 </div>
                 <div class="text-box">
                     <p>A robust e-Commerce website serves as the foundation of online retail business.
-                    Out of the Box understands the importance of utilizing 
-                    the latest technology to maximize profitability. 
-                    Our e-Commerce solutions offer the best in standard features and 
-                    functionality while remaining agile and completely customizable. 
-                    Our team will discuss any custom functionality needs to tailor 
-                    a solution that matches your brand and e-Commerce goals <br> <br>
-                    We use the modern trends for e-commerce development, including Chatbots,
-                    social media integration, engaging UX and one-click checkout techniques
-                    to ensure the best shopping experience. 
-                    Our experts walk with the emerging technologies and build influential 
-                    e-commerce storefronts based on Shopify, WooCommerce, Magento, 
-                    BigCommerce, PrestaShop, OpenCart, Drupal, Joomla and 
-                    custom made Node + Angular development platforms </p>
+                        Out of the Box understands the importance of utilizing
+                        the latest technology to maximize profitability.
+                        Our e-Commerce solutions offer the best in standard features and
+                        functionality while remaining agile and completely customizable.
+                        Our team will discuss any custom functionality needs to tailor
+                        a solution that matches your brand and e-Commerce goals <br> <br>
+                        We use the modern trends for e-commerce development, including Chatbots,
+                        social media integration, engaging UX and one-click checkout techniques
+                        to ensure the best shopping experience.
+                        Our experts walk with the emerging technologies and build influential
+                        e-commerce storefronts based on Shopify, WooCommerce, Magento,
+                        BigCommerce, PrestaShop, OpenCart, Drupal, Joomla and
+                        custom made Node + Angular development platforms </p>
                 </div>
             </div>
-    
+
             <div class="app-service-button">
                 <button>Get your business online</button>
             </div>
@@ -211,21 +213,21 @@
             <div class="service-container">
 
                 <div class="text-box">
-                    <p>Our data analytics and visualization services helps 
-                    organizations explore new capabilities, streamline 
-                    existing processes, improve forecasting abilities and 
-                    respond to market changes effectively<br> <br>
-                    We help organizations adopt data driven insights using 
-                    technologies like Power Bi, Hadoop, D3 JS, and Kibana 
-                    with Elastic search, etc. We empower managers with 
-                    automated reporting for faster decision making. <br><br>
-                    Our solutions are focused on understanding the activities
-                    around the processes to mine insightful inputs from 
-                    process inefficiencies and bottlenecks. 
-                    This solution helps your organization in converting large 
-                    volumes of data into user friendly dashboards. 
-                    This realtime data analysis will gauge the 
-                    performance of the system for strategical decisions. <br><br></p>
+                    <p>Our data analytics and visualization services helps
+                        organizations explore new capabilities, streamline
+                        existing processes, improve forecasting abilities and
+                        respond to market changes effectively<br> <br>
+                        We help organizations adopt data driven insights using
+                        technologies like Power Bi, Hadoop, D3 JS, and Kibana
+                        with Elastic search, etc. We empower managers with
+                        automated reporting for faster decision making. <br><br>
+                        Our solutions are focused on understanding the activities
+                        around the processes to mine insightful inputs from
+                        process inefficiencies and bottlenecks.
+                        This solution helps your organization in converting large
+                        volumes of data into user friendly dashboards.
+                        This realtime data analysis will gauge the
+                        performance of the system for strategical decisions. <br><br></p>
                 </div>
                 <div>
                     <img src="/images/v45vae45a4.png" alt="E-Commerce">
@@ -244,21 +246,21 @@
                 </div>
                 <div class="text-box">
                     <p>Data science is a multi-disciplinary field that uses scientific methods,
-                    processes, algorithms and systems to extract knowledge and insights 
-                    from structured and unstructured data. Data science is the same 
-                    concept as data mining and big data: "use the most powerful hardware, 
-                    the most powerful programming systems, and the most efficient 
-                    algorithms to solve problems"<br> <br> 
-                    "Data science" has recently become a popular term among business executives.
-                    However, many critical academics and journalists see no distinction between
-                    data science and statistics, whereas others consider it largely a popular 
-                    term for "data mining" and "big data". 
-                    Writing in Forbes, Gil Press argues that data science is a buzzword without 
-                    a clear definition and has simply replaced "business analytics" in contexts
-                    such as graduate degree programs</p>
+                        processes, algorithms and systems to extract knowledge and insights
+                        from structured and unstructured data. Data science is the same
+                        concept as data mining and big data: "use the most powerful hardware,
+                        the most powerful programming systems, and the most efficient
+                        algorithms to solve problems"<br> <br>
+                        "Data science" has recently become a popular term among business executives.
+                        However, many critical academics and journalists see no distinction between
+                        data science and statistics, whereas others consider it largely a popular
+                        term for "data mining" and "big data".
+                        Writing in Forbes, Gil Press argues that data science is a buzzword without
+                        a clear definition and has simply replaced "business analytics" in contexts
+                        such as graduate degree programs</p>
                 </div>
             </div>
-    
+
             <div class="app-service-button">
                 <button>Get your business online</button>
             </div>
@@ -297,4 +299,5 @@
         </footer>
     </div>
 </body>
+
 </html>
